--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Base Project</title>
+  <title>Mint Cat NFTs</title>
 
   <!-- Antd core CSS -->
   <link href="%PUBLIC_URL%/assets/css/antd.min.css" rel="stylesheet">
